Prevent horizontal scroll

--- a/source/stylesheets/base/_base.scss
+++ b/source/stylesheets/base/_base.scss
@@ -79,6 +79,7 @@ html {
 	padding: 0;
 	margin: 0;
 
+	overflow-x: hidden;
 	overflow-y: scroll; /* 3 */
 
 	font-size: 100.01%; /* 1 */
